--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
-    "resource-router-middleware": "^0.5.1",
-    "node-readability": "2.2.0"
+    "resource-router-middleware": "^0.5.1"
   }
 }
