--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "license": "MIT",
   "dependencies": {
     "babel": "^5.8.21",
-    "body-parser": "^1.13.3",
+    "body-parser": "^1.15.0",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.7.0",
+    "mongoose": "4.4.13",
+    "mongoose-user": "0.0.1",
+    "morgan": "^1.7.0",
     "resource-router-middleware": "^0.5.1"
   }
 }
