--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "~3.3.4",
     "co": "~4.6.0",
     "co-views": "~1.0.0",
+    "kcors": "^1.2.1",
     "koa": "~1.0.0",
     "koa-bodyparser": "~2.0.1",
     "koa-compress": "1.0.x",
