--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=development ./node_modules/.bin/nodemon --harmony server.js",
-    "prod": "NODE_ENV=production node --harmony server.js"
+    "start": "NODE_ENV=development ./node_modules/.bin/nodemon --exec npm run babel-node -- server.js",
+    "prod": "NODE_ENV=production node --harmony server.js",
+    "babel-node": "babel-node --presets=es2015 --ignore='node_modules'"
   },
   "repository": {
     "type": "git",
@@ -29,9 +30,12 @@
     "koa-router": "~5.1.2",
     "lodash": "~3.10.1",
     "mongoose": "~4.1.3",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "1.0.x"
   },
   "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "koa-proxy": "^0.3.0",
     "koa-sess-mongo-store": "~0.1.1",
     "nodemon": "~1.4.1",
