--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-error": "1.1.x",
     "koa-generic-session": "~1.9.2",
     "koa-logger": "1.3.0",
+    "koa-oauth-server": "^1.0.1",
     "koa-passport": "~1.1.5",
     "koa-response-time": "1.0.x",
     "koa-router": "~5.1.2",
